--- a/0x0F-mvc_crud/mvc_crud_app/src/App.css
+++ b/0x0F-mvc_crud/mvc_crud_app/src/App.css
@@ -5,7 +5,53 @@
   text-align: center;
 }
 
-.logo {
+.wrapper{
+  padding-top: 30px;
+}
+
+body h3{
+  margin-bottom: 25px;
+}
+
+.navbar-brand a{
+  color: #ffffff;
+}
+
+.form-wrapper,
+.table-wrapper{
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+.table-wrapper{
+  max-width: 700px;
+}
+
+.edit-link{
+  padding: 7px 10px;
+  font-size: 0.875rem;
+  line-height: normal;
+  border-radius: 0.2rem;
+  color: #fff;
+  background-color: #28a745;
+  border-color: 10px;
+  position: relative;
+  top: 1px;
+}
+
+.edit-link:hover{
+  text-decoration: none;
+  color: #ffffff;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button{
+  -webkit-animation: none;
+  margin: 0;
+}
+
+
+/* .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -31,7 +77,7 @@
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
+} */
 
 .card {
   padding: 2em;
