--- a/0x08-multi_page_website/zalisha/zalisha/app/globals.css
+++ b/0x08-multi_page_website/zalisha/zalisha/app/globals.css
@@ -48,7 +48,7 @@ body {
   scroll-behavior: smooth;
 }
 
-.text-gradient {
+/* .text-gradient {
   background: radial-gradient(
     64.18% 64.18% at 71.16% 35.69%,
     #def9fa 0.89%,
@@ -62,9 +62,25 @@ body {
   -webkit-text-fill-color: transparent;
   background-clip: text;
   text-fill-color: transparent;
+} */
+
+.text-gradient {
+  background: radial-gradient(
+    64.18% 64.18% at 71.16% 35.69%,
+    #ffe34d -43.27%,
+    #ffdf33 -21.24%,
+    #ffdb1a  12.19%,
+    #ffd700 29.82%,
+    #e6c200 51.94%,
+    #ccac00 90.29%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  /* text-fill-color: transparent; */
 }
 
-.bg-blue-gradient {
+/* .bg-blue-gradient {
   background: linear-gradient(
     157.81deg,
     #def9fa -43.27%,
@@ -74,8 +90,9 @@ body {
     #5ce1e6 51.94%,
     #33bbcf 90.29%
   );
-}
-/* .bg-blue-gradient {
+} */
+
+.bg-blue-gradient {
   background: linear-gradient(
     157.81deg,
     #ffe34d -43.27%,
@@ -85,7 +102,7 @@ body {
     #e6c200 51.94%,
     #ccac00 90.29%
   );
-} */
+}
 
 .bg-black-gradient {
   background: linear-gradient(
@@ -166,8 +183,8 @@ body {
 }
 
 .blue__gradient {
-  background: linear-gradient(180deg, rgba(188, 165, 255, 0) 0%, #214d76 100%);
-  background: linear-gradient(180deg, #ffdf33 0%, #ffdf00 100%);
+  /* background: linear-gradient(180deg, rgba(188, 165, 255, 0) 0%, #214d76 100%); */
+  /* background: linear-gradient(180deg, #ffdf33 0%, #ffdf00 100%); */
   filter: blur(123px);
 }
 
